[tool.poetry]
name = "pyhelm3"
version = "0.4.0"
description = "Python library for managing Helm releases using Helm 3 (i.e. Tiller-less Helm)."
authors = []

[tool.poetry.dependencies]
python = ">=3.9"
pyyaml = "^6.0.2"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
