[metadata]
name = pyhelm3
version = 0.1.0
description = Python library for managing Helm releases using Helm 3.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/pyhelm3


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic
    pyyaml
