[metadata]
name = pyhelm3
description = Python library for managing Helm releases using Helm 3.
long_description = file: README.md
long_description_content_type = text/markdown
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/pyhelm3
license_files = LICENSE

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic
    pyyaml
